<resources>
    <string name="app_name">What\'s Good</string>
    <string name="hello_world">Hello World!</string>

    <!-- API keys and tokens -->
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyA45heMbmn3sc00IAEcPx1BLWVWATRH4w8</string>
    <string name="FACEBOOK_APP_ID">1770254476615573</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">c01bd59ec998ef509a889c963a39f0c0</string>
    <string name="ak_login_protocol_scheme">ak1770254476615573</string>
    <string name="fb_login_protocol_scheme">fb1770254476615573</string>

    <!-- Options menu strings -->
    <string name="action_sort_by_name">Sort by name</string>
    <string name="action_sort_by_location">Sort by location</string>
    <string name="action_reset">Reset</string>

    <!-- Labels for the Log in buttons -->
    <string name="login_email_label">Login with email</string>
    <string name="login_phone_label">Login with phone number</string>
    <string name="continue_without_logging_in">Continue without logging in</string>

    <!-- String for empty view in Main Activity -->
    <string name="empty_view_title_text">No restaurants found</string>
    <string name="empty_view_subtitle_text">Try connecting to the internet</string>

    <!-- Bottom Navigation Bar Items -->
    <string name="nav_bar_list">List</string>
    <string name="nav_bar_map">Map</string>
    <string name="nav_bar_profile">Profile</string>

    <!-- Title for the Restaurant activity -->
    <string name="restaurant_activity_title">Restaurant Activity</string>
    <!-- RestaurantActivity: text to fill for specials if none are provided -->
    <string name="no_specials_added">No specials added for this day.</string>

    <!-- Labels for the ProfileFragment -->
    <string name="id_label">Name or Account ID</string>
    <string name="name_label">Name</string>
    <string name="account_id_label">Account ID</string>
    <string name="name_placeholder">Name Unknown</string>
    <string name="location_label">Location</string>
    <string name="location_placeholder">Unknown</string>
    <string name="phone_label">Phone Number</string>
    <string name="email_label">Email</string>
    <string name="logout_label">Log Out</string>

    <!-- Labels for the NotLoggedInFragment -->
    <string name="login_to_create_a_profile">Log in to create a profile</string>
    <string name="login_label">Log In</string>

    <!-- Days of the week -->
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="day_sunday">Sunday</string>

    <!-- Text to fill the EditText fields in the AddNewRestaurantActivity -->
    <string name="name">Name</string>
    <string name="restaurant_name_hint">Restaurant Name</string>
    <string name="address">Address</string>
    <string name="address_hint">Street, City, State</string>
    <string name="website_link">website link</string>
    <string name="website_link_hint">https://...</string>
    <string name="image_link">image link</string>
    <string name="image_link_hint">.png, .jpg, jpeg, etc.</string>
    <string name="specials">specials</string>
    <string name="dots">...</string>
    <string name="submit_button_text">Submit</string>

    <!-- Text to fill the comments EditText in the EditRestaurantActivity -->
    <string name="comments">Comments</string>
    <string name="comments_hint">Address change, logo change, etc.</string>

</resources>
